tests/neg/i13946/Printer.scala
// in Printer.scala
class Printer:
  def print(s: String): Unit = println(s)
